--- a/esm_204_a4.Rmd
+++ b/esm_204_a4.Rmd
@@ -651,7 +651,7 @@ pv_theta_T_4_4 <- data.frame(t = t_vector)  %>%
 ```
 
 
-Answer = line 80ish
+Answer = line 80is,  approx 40% (39.5)
 
 
 
@@ -759,16 +759,17 @@ pv_6 = sum(pv_df_6$pv_6)
 theta_solver_prob <- function(theta) { 
   out = (1-theta)^(1-n)*((pv_2*0.2)+(pv_4*0.5) + (pv_6*0.3))
   return(out)
+}
   
 pv_theta_T_prob <- data.frame(t = t_vector)  %>% 
   mutate(theta = theta_vector) %>% 
   mutate( pv_theta = theta_solver_prob(theta_vector))
-}
+
 
 ```
 
 
-
+0.025 = 1/40 = 2.5%
 
 
 
