--- a/esm_204_a4.Rmd
+++ b/esm_204_a4.Rmd
@@ -761,7 +761,12 @@ theta_solver_prob <- function(theta) {
   out = (1-theta)^(1-n)*((pv_2*0.2)+(pv_4*0.5) + (pv_6*0.3))
   return(out)
 }
-  
+
+pv_prob <- (pv_2*0.2)+(pv_4*0.5) + (pv_6*0.3)
+
+
+# We needed to calculate a new pv for the weighted values. This becomes our Vnot (198.66 last time, 201.34 this time) and we solve the exact same way as 2d. Answer is between 37.5% - 38%
+
 pv_theta_T_prob <- data.frame(t = t_vector)  %>% 
   mutate(theta = theta_vector) %>% 
   mutate( pv_theta = theta_solver_prob(theta_vector))
