--- a/esm_204_a4.Rmd
+++ b/esm_204_a4.Rmd
@@ -757,10 +757,10 @@ pv_6 = sum(pv_df_6$pv_6)
 
 ```{r}
 
-theta_solver_prob <- function(theta) { 
-  out = (1-theta)^(1-n)*((pv_2*0.2)+(pv_4*0.5) + (pv_6*0.3))
-  return(out)
-}
+#theta_solver_prob <- function(theta) { 
+#  out = (1-theta)^(1-n)*((pv_2*0.2)+(pv_4*0.5) + (pv_6*0.3))
+ # return(out)
+#}
 
 pv_prob <- (pv_2*0.2)+(pv_4*0.5) + (pv_6*0.3)
 
@@ -769,7 +769,7 @@ pv_prob <- (pv_2*0.2)+(pv_4*0.5) + (pv_6*0.3)
 
 pv_theta_T_prob <- data.frame(t = t_vector)  %>% 
   mutate(theta = theta_vector) %>% 
-  mutate( pv_theta = theta_solver_prob(theta_vector))
+  mutate( pv_theta = theta_solver_pv_0(theta_vector))
 
 
 ```
